--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   ],
   "author": "Minhyeok Park<pmh_only@pmh.codes>",
   "license": "MIT",
-    "devDependencies": {
+  "devDependencies": {
     "@jest/globals": "^29.4.1",
     "@types/crypto-js": "^4.1.1",
+    "@types/node": "^18.11.18",
+    "@types/yargs": "^17.0.22",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
@@ -35,5 +37,12 @@
   },
   "bin": {
     "octodrive-cli": "./dist/App.js"
+  },
+  "dependencies": {
+    "@fastify/multipart": "^7.4.0",
+    "@fastify/static": "^6.8.0",
+    "@octodevs/octodrive-sdk": "^0.2.0",
+    "fastify": "^4.12.0",
+    "yargs": "^17.6.2"
   }
 }
