--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@jest/globals": "^29.4.1",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.18",
+    "@types/prompts": "^2.4.2",
     "@types/yargs": "^17.0.22",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.33.0",
@@ -41,8 +42,11 @@
   "dependencies": {
     "@fastify/multipart": "^7.4.0",
     "@fastify/static": "^6.8.0",
-    "@octodevs/octodrive-sdk": "^0.2.0",
+    "@octodevs/octodrive-sdk": "^1.0.0",
+    "chalk": "^4.1.2",
     "fastify": "^4.12.0",
+    "prompts": "^2.4.2",
+    "undici": "^5.16.0",
     "yargs": "^17.6.2"
   }
 }
